2011-01-22  Jaroslav Hajek  <highegg@gmail.com>

	* oct-refcount.h: New source.
	* Makefile.am: Add it here.

	* Array.h: Use octave_refcount for refcounting.
	* Sparse.h: Ditto.
	* SparseCmplxQR.h: Ditto.
	* SparseQR.h: Ditto.
	* idx-vector.h: Ditto.
	* oct-shlib.h: Ditto.
	* sparse-base-chol.h: Ditto.

2011-01-21  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* oct-fftw.h (class octave_fftw_planner): Disallow copying
	(class octave_float_fftw_planner): Likewise.
	* oct-sort.h (class octave_sort): Likewise.
	(struct oct_sort::MergeState): Likewise.
	* SparseCmplxQR.h (class SparseComplexQR::SparseComplexQR_rep):
	Likewise.
	* sparse-base-chol.h (class sparse_base_cho::sparse_base_chol_rep):
	Likewise.

2011-01-21  John W. Eaton  <jwe@octave.org>

	* CMatrix.cc (xgemm): Initialize output matrix for call to ZHERK.
	* fCMatrix.cc (xgemm): Initialize output matrix for call to CHERK.

2011-01-20  John W. Eaton  <jwe@octave.org>

	* Array-b.cc, Array-d.cc, Array-f.cc, Array-util.cc,
	Array-util.h, Array.cc, Array.h, Array3.h, CColVector.cc,
	CColVector.h, CDiagMatrix.cc, CDiagMatrix.h, CMatrix.cc,
	CMatrix.h, CNDArray.cc, CNDArray.h, CSparse.cc, CSparse.h,
	CmplxAEPBAL.cc, CmplxAEPBAL.h, CmplxCHOL.cc, CmplxGEPBAL.cc,
	CmplxGEPBAL.h, CmplxHESS.cc, CmplxLU.h, CmplxQR.cc, CmplxQR.h,
	CmplxSCHUR.cc, CmplxSVD.h, CollocWt.cc, CollocWt.h, DASPK.cc,
	DASPK.h, DASRT.cc, DASRT.h, DASSL.cc, DASSL.h, DET.h,
	DiagArray2.h, EIG.cc, LSODE.cc, MArray.cc, MArray.h,
	MDiagArray2.cc, MDiagArray2.h, MSparse.cc, MSparse.h,
	MatrixType.cc, MatrixType.h, ODESFunc.h, PermMatrix.cc,
	PermMatrix.h, Quad.cc, Range.cc, Sparse.cc, Sparse.h,
	SparseCmplxCHOL.cc, SparseCmplxCHOL.h, SparseCmplxLU.cc,
	SparseCmplxLU.h, SparseCmplxQR.cc, SparseCmplxQR.h, SparseQR.cc,
	SparseQR.h, SparsedbleCHOL.cc, SparsedbleCHOL.h,
	SparsedbleLU.cc, SparsedbleLU.h, base-aepbal.h, base-de.h,
	base-lu.cc, base-lu.h, boolNDArray.cc, boolNDArray.h,
	boolSparse.cc, boolSparse.h, bsxfun-defs.cc, chMatrix.cc,